Changed the Collada-repository path to expose loader state.